--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -21,10 +21,10 @@
 }
 
 .customed-button-with-icon {
-    display: flex;
+    display: flex !important;
     align-items: center;
     gap: .5em;
-    padding: .45rem .75rem;
+    padding: .45rem .75rem !important;
 }
 
 .customed-svg {
