--- a/src/components/Aside/AccountCenterPageCtrls/AccountCenterPageCtrls.css
+++ b/src/components/Aside/AccountCenterPageCtrls/AccountCenterPageCtrls.css
@@ -7,7 +7,6 @@
 
 .account-center-aside-list {
     gap: 1em;
-    margin-bottom: 1em;
 }
 
 .active {
@@ -18,4 +17,8 @@
 #admin-button-container {
     width: 100%;
     margin-bottom: 3%;
+}
+
+.more-toggle {
+    justify-content: space-between;
 }
