feat: added close button to modals and toasts, refactor: reorganized the code

--- a/src/pages/SettingsPage/Reports/NewReportModal/NewReportModal.css
+++ b/src/pages/SettingsPage/Reports/NewReportModal/NewReportModal.css
@@ -1,6 +1,6 @@
 .new-report-modal-footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
 }
 
 .new-report-modal-footer>* {
