--- a/src/components/Aside/PlugPageCtrls/PlugPageCtrls.css
+++ b/src/components/Aside/PlugPageCtrls/PlugPageCtrls.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     justify-content: space-between;
     flex: 1;
+    max-height: 40%;
 }
 
 .info-container {
@@ -27,6 +28,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    max-height: 60%;
 }
 
 .generated {
